--- a/style/comp/_layout.scss
+++ b/style/comp/_layout.scss
@@ -1,36 +1,96 @@
-
-nav{
-    color: $GrayishBlue;
-    display: flex;
-    justify-content: space-between;
-    padding: 5px 10px;
-    .logo{
-
-    }
-    .menu{
+header{
+    width: 100%;
+    nav{
+        color: $GrayishBlue;
         display: flex;
-        ul{
+        justify-content: space-between;
+        padding: 5px 10px;
+        
+        @include devices('mobile'){
+            padding: 35px;
+            position: relative;
+            width: 100%;
+        }
+        .logo{
             display: flex;
-            padding: 15px;
-            margin: 15px;
-            list-style: none;
+            justify-content: center;
+            align-items: center;
+        }
+        .menuBtn{
             
-            li{
+            position: relative;
+            right: 5px;
+          .x{
+            position: fixed;
+            right: 50px;
+            top: 40px;
+          }
+          .a{
+            display: none;
+          }
+            @include devices('desktop'){
+                display: none;
+            }
+        }
+        .menu{
+            display: flex;
+            
+            
+            @include devices ('mobile'){
+                
+                position: fixed;
+                background-color: $Off-white;
+                width: 100%;
+                height: 100%;
+                margin-top: -40px;
+                padding-top: 80px;
+                &.hide{
+                    display: none;
+                }
+                &.show{
+                    display: block;
+                }
+            }
+            
+            
+            ul{
+                display: flex;
+                padding: 15px;
                 margin: 15px;
-                text-decoration: none;
-                color: $GrayishBlue;
+                list-style: none;
+                @include devices('mobile'){
+                    display: block;
+                    margin-top: 15px;
+                }
+                
+                li{
+                    a{
+                        color: $VeryDarkBlue;
+                        &:hover{
+                            color:$SoftOrange;
+                        }
+                    }
+                    
+                    margin: 15px;
+                    text-decoration: none;
+                    color: $GrayishBlue;
+                }
             }
         }
     }
+    
 }
 
 .front{
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: repeat(3, 1fr);
+    grid-template-rows: repeat(3, 0.5fr);
     grid-column-gap: 25px;
     grid-row-gap: 25px;
-    
+    margin-bottom: -30px;
+    @include devices('mobile'){
+        display: block;
+    }
 }
 
 .pic{
@@ -51,17 +111,31 @@ nav{
                 }
                 #mob{
                     display: block;
+                    width: 100%;
                 }
             }
         }
     }
+
     .header{
         grid-area: 2 / 1 / 3 / 2;
     }
     .content{
         grid-area: 2 / 2 / 3 / 3;
+        
+        @include devices ('desktop'){
+            position: relative;
+        }
+        @include devices('mobile'){
+            display: block;
+            
+        }
         button{
-            position:absolute;
+            @include devices('desktop'){
+                position:absolute;
+               
+            }
+            margin: 10px 0;
             width: 150px;
             height: 50px;
             text-transform: uppercase;
@@ -86,30 +160,62 @@ nav{
         h1{
             color: $SoftOrange;
         }
-        h3{
-            a{
-                color: $Off-white;
-                text-decoration: none;
-                font-size: 18px;
-              
-                &:hover{
-                    color: $SoftOrange;
-                }
-            }
-        }
+       
         p{
             color: $GrayishBlue;
             margin-top: 10px;
         }
     }
     .cardCont{
-        .--1{
-            grid-area: 3 / 1 / 4 / 2;
+        margin-top: -15px;
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        grid-template-rows: 1fr;
+        grid-column-gap: 17px;
+        grid-row-gap: 0px;
+        @include devices('mobile'){
+            display: block;
+            margin: 50px 0;
         }
-        .--2{
-            grid-area: 3 / 2 / 4 / 3;
+        .div{
+            display: flex;
+            justify-content: space-between;
+            .left{
+                margin: 0 10px;
+                img{
+                    width: 104px;
+                    height: 140px;
+                }
+            }
+            .right{
+                display: block;
+                
+                .numb{
+                    color: $GrayishBlue;
+                    font-size: 30px;
+                    font-weight: 800;
+                }
+                .title{
+                    margin: 5px 0;
+                    a{
+                        color: $VeryDarkBlue;
+                        &:hover{
+                            color: $SoftRed;
+                        }
+                    }
+                    
+                }
+            }
         }
-        .--3{
-            grid-area: 3 / 3 / 4 / 4; 
+        .--1 { 
+            grid-area: 1 / 1 / 2 / 2; 
         }
+        .--2 { 
+            grid-area: 1 / 2 / 2 / 3; 
+        }
+        .--3 { grid-area: 1 / 3 / 2 / 4; }
     }
+footer{
+    .attribution { font-size: 11px; text-align: center; }
+    .attribution a { color: hsl(228, 45%, 44%); }
+}
