--- a/style/style.css
+++ b/style/style.css
@@ -12,6 +12,11 @@
 body {
   padding: 10px 40px;
 }
+@media only screen and (max-width: 376px) {
+  body {
+    padding: 5px 10px;
+  }
+}
 
 h1 {
   font-size: 48px;
@@ -26,33 +31,108 @@ hr {
   border-top: 1px solid hsl(36deg, 100%, 99%);
 }
 
-nav {
+a {
+  color: hsl(36deg, 100%, 99%);
+  text-decoration: none;
+  font-size: 18px;
+}
+a:hover {
+  color: hsl(35deg, 77%, 62%);
+}
+
+header {
+  width: 100%;
+}
+header nav {
   color: hsl(233deg, 8%, 79%);
   display: flex;
   justify-content: space-between;
   padding: 5px 10px;
 }
-nav .menu {
+@media only screen and (max-width: 376px) {
+  header nav {
+    padding: 35px;
+    position: relative;
+    width: 100%;
+  }
+}
+header nav .logo {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+header nav .menuBtn {
+  position: relative;
+  right: 5px;
+}
+header nav .menuBtn .x {
+  position: fixed;
+  right: 50px;
+  top: 40px;
+}
+header nav .menuBtn .a {
+  display: none;
+}
+@media only screen and (min-width: 377px) {
+  header nav .menuBtn {
+    display: none;
+  }
+}
+header nav .menu {
   display: flex;
 }
-nav .menu ul {
+@media only screen and (max-width: 376px) {
+  header nav .menu {
+    position: fixed;
+    background-color: hsl(36deg, 100%, 99%);
+    width: 100%;
+    height: 100%;
+    margin-top: -40px;
+    padding-top: 80px;
+  }
+  header nav .menu.hide {
+    display: none;
+  }
+  header nav .menu.show {
+    display: block;
+  }
+}
+header nav .menu ul {
   display: flex;
   padding: 15px;
   margin: 15px;
   list-style: none;
 }
-nav .menu ul li {
+@media only screen and (max-width: 376px) {
+  header nav .menu ul {
+    display: block;
+    margin-top: 15px;
+  }
+}
+header nav .menu ul li {
   margin: 15px;
   text-decoration: none;
   color: hsl(233deg, 8%, 79%);
+}
+header nav .menu ul li a {
+  color: hsl(240deg, 100%, 5%);
+}
+header nav .menu ul li a:hover {
+  color: hsl(35deg, 77%, 62%);
 }
 
 .front {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  grid-template-rows: repeat(3, 1fr);
+  grid-template-rows: repeat(3, 0.5fr);
   grid-column-gap: 25px;
   grid-row-gap: 25px;
+  margin-bottom: -30px;
+}
+@media only screen and (max-width: 376px) {
+  .front {
+    display: block;
+  }
 }
 
 .pic {
@@ -72,6 +152,7 @@ nav .menu ul li {
   }
   .pic .imgCont #mob {
     display: block;
+    width: 100%;
   }
 }
 
@@ -82,14 +163,29 @@ nav .menu ul li {
 .content {
   grid-area: 2/2/3/3;
 }
+@media only screen and (min-width: 377px) {
+  .content {
+    position: relative;
+  }
+}
+@media only screen and (max-width: 376px) {
+  .content {
+    display: block;
+  }
+}
 .content button {
-  position: absolute;
+  margin: 10px 0;
   width: 150px;
   height: 50px;
   text-transform: uppercase;
   color: hsl(36deg, 100%, 99%);
   background-color: hsl(5deg, 85%, 63%);
   bottom: 0;
+}
+@media only screen and (min-width: 377px) {
+  .content button {
+    position: absolute;
+  }
 }
 .content button:hover {
   background-color: hsl(240deg, 100%, 5%);
@@ -107,25 +203,67 @@ nav .menu ul li {
 .side h1 {
   color: hsl(35deg, 77%, 62%);
 }
-.side h3 a {
-  color: hsl(36deg, 100%, 99%);
-  text-decoration: none;
-  font-size: 18px;
-}
-.side h3 a:hover {
-  color: hsl(35deg, 77%, 62%);
-}
 .side p {
   color: hsl(233deg, 8%, 79%);
   margin-top: 10px;
 }
 
+.cardCont {
+  margin-top: -15px;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: 1fr;
+  grid-column-gap: 17px;
+  grid-row-gap: 0px;
+}
+@media only screen and (max-width: 376px) {
+  .cardCont {
+    display: block;
+    margin: 50px 0;
+  }
+}
+.cardCont .div {
+  display: flex;
+  justify-content: space-between;
+}
+.cardCont .div .left {
+  margin: 0 10px;
+}
+.cardCont .div .left img {
+  width: 104px;
+  height: 140px;
+}
+.cardCont .div .right {
+  display: block;
+}
+.cardCont .div .right .numb {
+  color: hsl(233deg, 8%, 79%);
+  font-size: 30px;
+  font-weight: 800;
+}
+.cardCont .div .right .title {
+  margin: 5px 0;
+}
+.cardCont .div .right .title a {
+  color: hsl(240deg, 100%, 5%);
+}
+.cardCont .div .right .title a:hover {
+  color: hsl(5deg, 85%, 63%);
+}
 .cardCont .--1 {
-  grid-area: 3/1/4/2;
+  grid-area: 1/1/2/2;
 }
 .cardCont .--2 {
-  grid-area: 3/2/4/3;
+  grid-area: 1/2/2/3;
 }
 .cardCont .--3 {
-  grid-area: 3/3/4/4;
+  grid-area: 1/3/2/4;
+}
+
+footer .attribution {
+  font-size: 11px;
+  text-align: center;
+}
+footer .attribution a {
+  color: hsl(228deg, 45%, 44%);
 }/*# sourceMappingURL=style.css.map */
